platform_versioned_docs/version-23.4/index.mdx
---
title: "Seqera Platform Enterprise"
description: "Introduction to Seqera Platform Enterprise."
date: "24 Apr 2023"
---


Seqera Platform Enterprise is an intuitive, centralized command post designed to make scientific analysis accessible at any scale. 

Seqera Enterprise acts as a pane of glass to effortlessly launch, manage, monitor, and collaborate on scalable [Nextflow](https://www.nextflow.io) data analysis using your own computing resources and infrastructure. Researchers can focus on the science that matters, rather than worrying about infrastructure engineering.

Seqera Enterprise helps organizations:

- Launch, manage, and monitor portable Nextflow pipelines from anywhere in real time
- Enable non-technical users to run pipelines via the intuitive Launchpad interface
- Easily provision and leverage cloud-based and HPC compute environments
- Share pipelines and data and collaborate securely between local and remote teams
- Access a [curated library](https://seqera.io/pipelines/) of production-proven Nextflow community pipelines from [nf-core](https://nf-co.re/) and others 
- [Automate](./getting-started/quickstart-demo/automation.mdx) complex tasks as part of broader enterprise processes

:::tip
Request a [**demo**](https://seqera.io/demo "Seqera Enterprise Demo") to explore using Seqera Enterprise in your own on-premises or cloud environment.
:::

### What is Nextflow?

[Nextflow](https://www.nextflow.io) is a framework for the development of data workflows. It enables engineers and data scientists to create and securely deploy custom, parallel data applications to the cloud or traditional on-premises infrastructure. Nextflow is characterized by its powerful dataflow programming paradigm and execution engines that allow for transparent deployment.

Nextflow is both a programming workflow language and an execution runtime that supports a wide range of execution platforms, including popular traditional grid scheduling systems such as Slurm and IBM LSF, and cloud services such as AWS, Azure, and Google Cloud Batch.

See the [Nextflow documentation](https://www.nextflow.io/docs/latest/) to learn more. 
