platform_versioned_docs/version-24.1/index.mdx

---
title: "Seqera Platform"
description: "Introduction to Seqera Platform."
date: "24 Apr 2023"
---


Seqera Platform is an intuitive, centralized command post designed to make scientific analysis accessible at any scale. 

Platform acts as a pane of glass to effortlessly launch, manage, monitor, and collaborate on scalable [Nextflow](https://www.nextflow.io) data analysis using your own computing resources and infrastructure. Researchers can focus on the science that matters, rather than worrying about infrastructure engineering.

Seqera helps organizations:

- Launch, manage, and monitor portable Nextflow pipelines from anywhere in real-time
- Enable non-technical users to run pipelines via the intuitive Launchpad interface
- Easily provision and leverage cloud-based and HPC compute environments
- Share pipelines and data and collaborate securely between local and remote teams
- Access a [curated library](https://seqera.io/pipelines/) of production-proven Nextflow community pipelines from [nf-core](https://nf-co.re/) and others 
- [Automate](./getting-started/quickstart-demo/automation.mdx) complex tasks as part of broader enterprise processes

### Deployment methods

Seqera offers two deployment methods:

- **Seqera Cloud**: A version of the application available as a SaaS solution, hosted on Seqera's infrastructure.
- **Seqera Enterprise**: A lightweight, deployable version of the application hosted on your own infrastructure.

:::tip
[**Sign up**](https://cloud.seqera.io "Seqera Platform") to try Seqera for free, or request a [**demo**](https://seqera.io/demo "Seqera Platform Demo") for deployments in your own on-premises or cloud environment.
:::

### Access Platform

Log in to [Seqera Cloud](https://cloud.seqera.io/login) with your GitHub or Google account, or by providing an email address. If you are signing in for the first time, Seqera Cloud will send an authentication link to the email address to enable login.

Upon your first login, you arrive in `community/showcase`, a workspace pre-filled with resources to launch your first pipeline with public data.

- To begin launching Showcase pipelines, see [Launch pipelines](./getting-started/quickstart-demo/launch-pipelines.mdx).
- To skip the Showcase and begin adding your own pipelines and resources, see [Set up your workspace](./getting-started/workspace-setup.mdx) to first create your own organizations and workspaces. 

### What is Nextflow?

[Nextflow](https://www.nextflow.io) is a framework for the development of data workflows. It enables engineers and data scientists to create and securely deploy custom, parallel data applications to the cloud or traditional on-premises infrastructure. Nextflow is characterized by its powerful dataflow programming paradigm and execution engines that allow for transparent deployment.

Nextflow is both a programming workflow language and an execution runtime that supports a wide range of execution platforms, including popular traditional grid scheduling systems such as Slurm and IBM LSF, and cloud services such as AWS, Azure, and Google Cloud Batch.

See the [Nextflow documentation](https://www.nextflow.io/docs/latest/) to learn more. 
